# research-Lazy

./: .env.example  .gitignore  AGENTS.md  README.md  agent_system_prompts.yaml  pyproject.toml  requirements.txt
.specify/: integration.json
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
PRD-references/: 00_INDEX.md  01_PRD_and_Workflow.md  02_System_Architecture.md  03_Multi_Agent_Topology.md  04_Robustness_and_Recovery.md
demo_files/: 课题名称大语言模型中隐性世界观的漂移检测与因果校准  核心问_2026_05_13_论文.docx  课题名称大语言模型中隐性世界观的漂移检测与因果校准 核心问题_2026_05_13_专利.docx
frontend/: index.html
src/: __init__.py  config.py  workflow_log.txt
src/agents/: base.py  editor.py  investigator.py  reviewer.py  writer.py
src/agents_extended/: __init__.py  paper_agent.py  patent_agent.py
src/api/: event_storage.py  events.py  main.py  schemas.py
src/api/middleware/: __init__.py
src/api/routes/: __init__.py  health.py  research.py  settings.py  stream.py
src/llm/: adapter.py
src/llm/providers/: anthropic.py  azure.py  ollama.py  openai.py
src/skills/: __init__.py  base.py  constants.py  docx_generator.py  paper_writer.py  patent_writer.py  registry.py
src/storage/: cache.py  models.py
src/storage/repositories/: task_repository.py
src/utils/: cleanup.py  document_parser.py  exceptions.py  logger.py  template.py  workspace.py
src/workflow/: builder.py  checkpoint.py  context.py  executor.py  retry.py  state_machine.py  timeout.py
tests/: test_workflow.py
tests/integration/: test_api.py
tests/unit/: test_agents.py
(+20 files in other folders)
